# c_opengl_template

./: CMakeLists.txt  main.c  readme.md
shaders/: shader.frag  shader.vert
util/: CMakeLists.txt  ogl_util.c  ogl_util.h
